--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-# DATABASE_URL=postgres://yugabyte@localhost:5433/faculity
-DATABASE_URL=mysql://user:password@loalhost:5433/faculity
+#DATABASE_URL=mysql://mysql@localhost:3306/faculity
+DATABASE_URL=mysql://admin:admin@127.0.0.1:3306/faculity
+#MYSQL_ROOT_HOST=%
