--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,23 +3,18 @@ edition = "2021"
 name = "exp_rocket"
 version = "0.1.0"
 
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = {version = "1.4.8", features = ["mysql"]}
+rocket = "0.4.10"
+diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
 dotenv = "0.15.0"
-env_logger = "0.9.0"
-rocket = {version = "0.4.10", default-features = false}
-rocket_codegen = "0.4.10"
-serde = "1.0.136"
-serde_derive = "1.0.136"
+chrono = "0.4"
+serde = { version = "1.0.117", features = ["derive"] }
+country-emoji = "0.1.2"
 
 [dependencies.rocket_contrib]
+version = "0.4.10"
 default-features = false
-features = ["tera_templates"]
-version = "*"
-
-# in your application, you should enable only the template engine(s) used
-# [dependencies.rocket_dyn_templates]
-# features = ["handlebars"]
-# version = "0.1.0-rc.1"
+features = ["diesel_mysql_pool", "tera_templates"]
